--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <div class="row">
             <div class="col-md-2 navleft">
-                <img src="../images/logo.png">
+                <img src="/images/logo.png">
             </div>
             <div class="col-md-10 navright">
                 <ul>
