--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh">
 
-		<img src="/images/ProTech.png" alt="ProTech Logo" />
+		<img src="images/ProTech.png" alt="ProTech Logo" />
 
 
 		<form class="border shadow p-3 rounded" action="/login" method="post" style="width: 450px;">
