--- a/customer.html
+++ b/customer.html
@@ -75,6 +75,149 @@
                                 </tr>
                                 <tr ng-repeat="data in namesData" ng-include="getTemplate(data)">
                                 </tr>
+                                <td>234234}</td>
+                                <td>234234234</td>
+                                <td>234324</td>
+                                <td>234234</td>
+                                <td>234234</td>
+                                <td>234234</td>
+                                <td>234234234</td>
+                                <td>23423423</td>
+                                <td>
+                                    <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                    <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                </td>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>234234}</td>
+                                    <td>234234234</td>
+                                    <td>234324</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234</td>
+                                    <td>234234234</td>
+                                    <td>23423423</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.customer_id)">Delete</button>
+                                    </td>
+                                </tr>
+                                
+
+
                             </tbody>
                         </table>
                     </form>
