--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<option value="Admin">Admin</option>
 			</select>
 <br>	
-			<a href="dashboard.html"><button type="button" class="btn btn-primary col-12" style="margin-bottom:5px">LOGIN</button></a><br>
+			<a href="staffmanagement.html"><button type="button" class="btn btn-primary col-12" style="margin-bottom:5px">LOGIN</button></a><br>
 			<a href="/newemp" style="text-decoration:none;">New Employee</a>
 		</form>
 	</div>
