--- a/product.html
+++ b/product.html
@@ -84,6 +84,59 @@
                                 <td><button type="submit" class="btn btn-success btn-block" ng-disabled="testform.$invalid">Add</button></td>
                             </tr>
                             <tr ng-repeat="data in namesData" ng-include="getTemplate(data)"> </tr>
+                            <tr>         <td>asdsadasd}</td>
+                                <td>asdsadasdasd</td>
+                                <td>xcvxcvxcv</td>
+                                <td>xcvxcvxcvxcv</td>
+                                <td>zxczxczxczxc</td>
+                                <td>tyrtyrty</td>
+                                <td>ghjghjghjhgj</td>
+                                <td>jhkhjkjhk</td>
+                                <td>qweqwewqe</td>
+                                <td>
+                                    <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                    <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                </td></tr>
+                                <tr>         <td>asdsadasd}</td>
+                                    <td>asdsadasdasd</td>
+                                    <td>xcvxcvxcv</td>
+                                    <td>xcvxcvxcvxcv</td>
+                                    <td>zxczxczxczxc</td>
+                                    <td>tyrtyrty</td>
+                                    <td>ghjghjghjhgj</td>
+                                    <td>jhkhjkjhk</td>
+                                    <td>qweqwewqe</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                    </td></tr>
+                                    <tr>         <td>asdsadasd}</td>
+                                        <td>asdsadasdasd</td>
+                                        <td>xcvxcvxcv</td>
+                                        <td>xcvxcvxcvxcv</td>
+                                        <td>zxczxczxczxc</td>
+                                        <td>tyrtyrty</td>
+                                        <td>ghjghjghjhgj</td>
+                                        <td>jhkhjkjhk</td>
+                                        <td>qweqwewqe</td>
+                                        <td>
+                                            <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                            <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                        </td></tr>
+                                        <tr>         <td>asdsadasd}</td>
+                                            <td>asdsadasdasd</td>
+                                            <td>xcvxcvxcv</td>
+                                            <td>xcvxcvxcvxcv</td>
+                                            <td>zxczxczxczxc</td>
+                                            <td>tyrtyrty</td>
+                                            <td>ghjghjghjhgj</td>
+                                            <td>jhkhjkjhk</td>
+                                            <td>qweqwewqe</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                                <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                            </td></tr>
+                                            
                         </tbody>
                         <!-------------------------------------------------------------------------------------------------------------------------------->
                     </table>
