--- a/staffmanagement.html
+++ b/staffmanagement.html
@@ -98,6 +98,91 @@
                 </tr>
                 <tr ng-repeat="data in namesData" ng-include="getTemplate(data)">
                 </tr>
+                <tr>
+                  <td>sdfsdfsdfsdfsd</td>
+                  <td>sdfdsfsdfsdf</td>
+                  <td>sdfdsfsdfsdf</td>
+                  <td>sdfsdfsdfsdf</td>
+                  <td>sdfdsfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdf</td>
+                  <td>ssfgsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>@234234</td>
+                  <td>234234234</td>
+                  <td>sdfsdfsdf</td>
+                  <td>xcvbcvbcvb</td>
+                  <td>sdfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdfsd</td>
+                  <td>@sfdsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>@234234</td>
+                  <td>234234234</td>
+                  <td>sdfsdfsdf</td>
+                  <td>xcvbcvbcvb</td>
+                  <td>sdfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdfsd</td>
+                  <td>@sfdsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>@234234</td>
+                  <td>234234234</td>
+                  <td>sdfsdfsdf</td>
+                  <td>xcvbcvbcvb</td>
+                  <td>sdfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdfsd</td>
+                  <td>@sfdsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>@234234</td>
+                  <td>234234234</td>
+                  <td>sdfsdfsdf</td>
+                  <td>xcvbcvbcvb</td>
+                  <td>sdfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdfsd</td>
+                  <td>@sfdsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>@234234</td>
+                  <td>234234234</td>
+                  <td>sdfsdfsdf</td>
+                  <td>xcvbcvbcvb</td>
+                  <td>sdfsdfsdf</td>
+                  <td>sdfsdfsdfsdfsdfsd</td>
+                  <td>@sfdsfsdfdsf</td>
+
+                  <td>
+                      <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                      <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
+                  </td>
+                </tr>
+                
               </tbody>
             </table>
           </form>
