--- a/profile.html
+++ b/profile.html
@@ -23,10 +23,10 @@ use Illuminate\Support\Facades\DB;
           
           <div class="col-md-10 navright">
             <ul>  
-             <li><a href="/staffdashboard">Dashboard</a></li>
-             <li><a href="/customermanagement">Customer Management</a></li>
-              <li><a href="/profile">My Profile</a></li>
-              <li><a href="/logout">Logout</a></li>
+             <li><a href="dashboard.html">Dashboard</a></li>
+             <li><a href="customer.html">Customer Management</a></li>
+              <li><a href="profile.html">My Profile</a></li>
+              <li><a href="index.html">Logout</a></li>
             </ul>
           </div>
           
