--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- fav icon -->
     <link rel="shortcut icon" type="images/png" href="../images/favicon.png" />
-    <link rel="stylesheet" href="../CSS/product.css">
+    <link rel="stylesheet" href="CSS/product.css">
     <script src="js/product.js"></script>
 </head>
 
@@ -136,7 +136,7 @@
                                                 <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                                 <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
                                             </td></tr>
-                                            
+
                         </tbody>
                         <!-------------------------------------------------------------------------------------------------------------------------------->
                     </table>
