--- a/staffmanagement.html
+++ b/staffmanagement.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <!-- fav icon -->
   <link rel="shortcut icon" type="images/png" href="../images/favicon.png" />
-  <link rel="stylesheet" href="../CSS/staff.css">
+  <link rel="stylesheet" href="CSS/staff.css">
   <script src="js/staff.js"></script>
 
 </head>
@@ -182,7 +182,7 @@
                       <button type="button" class="btn btn-danger btn-block" n g-click="deleteData(data.staff_id)">Delete</button>
                   </td>
                 </tr>
-                
+
               </tbody>
             </table>
           </form>
