--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <!-- fav icon -->
   <link rel="shortcut icon" type="images/png" href="images/favicon.png" />
-  <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="CSS/dashboard.css">
   <script src="js/dashboard.js"></script>
 
 </head>
