--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,7 @@ use Illuminate\Support\Facades\DB;
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <!-- fav icon -->
     <link rel="shortcut icon" type="images/png" href="../images/favicon.png" />
-    <link rel="stylesheet" href="../CSS/sales.css">
+    <link rel="stylesheet" href="CSS/sales.css">
 </head>
 
 <body>
