--- a/sales.html
+++ b/sales.html
@@ -28,7 +28,7 @@ use Illuminate\Support\Facades\DB;
                     <li><a href="staffmanagement.html">Staff Management</a></li>
                     <li><a href="product.html">Product</a></li>
                     <li><a href="sales.html">Sales</a></li>
-                    <li><a href="../index.html">Logout</a></li>
+                    <li><a href="index.html">Logout</a></li>
                 </ul>
             </div>
         </div>
