--- a/staffmanagement.html
+++ b/staffmanagement.html
@@ -27,14 +27,14 @@
   <nav class="navbar">
     <div class="row">
       <div class="col-md-2 navleft">
-        <img src="../images/logo.png">
+        <img src="images/logo.png">
       </div>
       <div class="col-md-10 navright">
         <ul>
           <li><a href="staffmanagement.html">Staff Management</a></li>
           <li><a href="product.html">Product</a></li>
           <li><a href="sales.html">Sales</a></li>
-          <li><a href="../index.html">Logout</a></li>
+          <li><a href="index.html">Logout</a></li>
         </ul>
       </div>
     </div>
