--- a/sales.html
+++ b/sales.html
@@ -21,7 +21,7 @@ use Illuminate\Support\Facades\DB;
     <nav class="navbar">
         <div class="row">
             <div class="col-md-2 navleft">
-                <img src="../images/logo.png">
+                <img src="images/logo.png">
             </div>
             <div class="col-md-10 navright">
                 <ul>
