--- a/sales.html
+++ b/sales.html
@@ -259,7 +259,9 @@ use Illuminate\Support\Facades\DB;
                             <th>Items Left</th>
                         </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody>
+                        
+                    </tbody>
                 </table>
             </div>
         </div>
