--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
                     <li><a href="staffmanagement.html">Staff Management</a></li>
                     <li><a href="product.html">Product</a></li>
                     <li><a href="sales.html">Sales</a></li>
-                    <li><a href="../index.html">Logout</a></li>
+                    <li><a href="index.html">Logout</a></li>
                 </ul>
             </div>
         </div>
