--- a/product.html
+++ b/product.html
@@ -84,58 +84,98 @@
                                 <td><button type="submit" class="btn btn-success btn-block" ng-disabled="testform.$invalid">Add</button></td>
                             </tr>
                             <tr ng-repeat="data in namesData" ng-include="getTemplate(data)"> </tr>
-                            <tr>         <td>asdsadasd}</td>
-                                <td>asdsadasdasd</td>
-                                <td>xcvxcvxcv</td>
-                                <td>xcvxcvxcvxcv</td>
-                                <td>zxczxczxczxc</td>
-                                <td>tyrtyrty</td>
-                                <td>ghjghjghjhgj</td>
-                                <td>jhkhjkjhk</td>
-                                <td>qweqwewqe</td>
+                            <tr><td>23423 4</td>
+                                <td>Davao</td>
+                                <td>Lenovo Legion</td>
+                                <td>Lenovo</td>
+                                <td>1</td>
+                                <td>2020</td>
+                                <td>45000</td>
+                                <td>high speed</td>
+                                <td>2343</td>
                                 <td>
                                     <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                     <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
                                 </td></tr>
-                                <tr>         <td>asdsadasd}</td>
-                                    <td>asdsadasdasd</td>
-                                    <td>xcvxcvxcv</td>
-                                    <td>xcvxcvxcvxcv</td>
-                                    <td>zxczxczxczxc</td>
-                                    <td>tyrtyrty</td>
-                                    <td>ghjghjghjhgj</td>
-                                    <td>jhkhjkjhk</td>
-                                    <td>qweqwewqe</td>
+                                <tr>         <td>2342344</td>
+                                    <td>Davao</td>
+                                    <td>Mousepad</td>
+                                    <td>Genius</td>
+                                    <td>2</td>
+                                    <td>2020</td>
+                                    <td>2342344</td>
+                                    <td>soft</td>
+                                    <td>234234</td>
                                     <td>
                                         <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                         <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
                                     </td></tr>
-                                    <tr>         <td>asdsadasd}</td>
-                                        <td>asdsadasdasd</td>
-                                        <td>xcvxcvxcv</td>
-                                        <td>xcvxcvxcvxcv</td>
-                                        <td>zxczxczxczxc</td>
-                                        <td>tyrtyrty</td>
-                                        <td>ghjghjghjhgj</td>
-                                        <td>jhkhjkjhk</td>
-                                        <td>qweqwewqe</td>
+                                    <tr>         <td>234234222</td>
+                                        <td>Davao</td>
+                                        <td>Mechanical Keyboard</td>
+                                        <td>RK</td>
+                                        <td>3</td>
+                                        <td>2020</td>
+                                        <td>234234</td>
+                                        <td>durable</td>
+                                        <td>3234</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                             <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
                                         </td></tr>
-                                        <tr>         <td>asdsadasd}</td>
-                                            <td>asdsadasdasd</td>
-                                            <td>xcvxcvxcv</td>
-                                            <td>xcvxcvxcvxcv</td>
-                                            <td>zxczxczxczxc</td>
-                                            <td>tyrtyrty</td>
-                                            <td>ghjghjghjhgj</td>
-                                            <td>jhkhjkjhk</td>
-                                            <td>qweqwewqe</td>
+                                        <tr>         <td>234234</td>
+                                            <td>Davao</td>
+                                            <td>Mouse</td>
+                                            <td>Dragon</td>
+                                            <td>4</td>
+                                            <td>2021</td>
+                                            <td>2342</td>
+                                            <td>6000 dpi</td>
+                                            <td>4567</td>
                                             <td>
                                                 <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
                                                 <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
                                             </td></tr>
+
+                                            <tr>         <td>234234234</td>
+                                                <td>Davao</td>
+                                                <td>Filmora</td>
+                                                <td>Wondershare</td>
+                                                <td>5</td>
+                                                <td>2021</td>
+                                                <td>23422</td>
+                                                <td>Animation Feature</td>
+                                                <td>45267</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                                    <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                                </td></tr>
+                                                <tr>         <td>2342324</td>
+                                                    <td>Davao</td>
+                                                    <td>Windows 10 OS</td>
+                                                    <td>Mircrosoft</td>
+                                                    <td>6</td>
+                                                    <td>2021</td>
+                                                    <td>23423</td>
+                                                    <td>New Features</td>
+                                                    <td>45672</td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                                        <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                                    </td></tr>
+                                                    <tr>         <td>21343234</td>
+                                                        <td>Davao</td>
+                                                        <td>Office Keyboard</td>
+                                                        <td>Henuis</td>
+                                                        <td>7</td>
+                                                        <td>2021</td>
+                                                        <td>52342</td>
+                                                        <td>Cheap and affordable</td>
+                                                        <td>45673</td>
+                                                        <td>
+                                                            <button type="button" class="btn btn-primary btn-block" ng-click="showEdit(data)">Edit</button>
+                                                            <button type="button" class="btn btn-danger btn-block" ng-click="deleteData(data.product_id)">Delete</button>
+                                                        </td></tr>
 
                         </tbody>
                         <!-------------------------------------------------------------------------------------------------------------------------------->
