--- a/sales.html
+++ b/sales.html
@@ -260,9 +260,52 @@ use Illuminate\Support\Facades\DB;
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        <tr>
+                            <td>Lenovo Legion</td>
+                            <td>4353555435</td>
+                            <td>3455</td>
+                            <td>234</td>
+                        </tr>
+                        <tr>
+                            <td>Filmora</td>
+                            <td>23452343</td>
+                            <td>567</td>
+                            <td>345</td>
+                        </tr>
+                        <tr>
+                            <td>Windows 10</td>
+                            <td>3455234</td>
+                            <td>2354</td>
+                            <td>2133</td>
+                        </tr>
+                        <tr>
+                            <td>Mouse</td>
+                            <td>2342443</td>
+                            <td>456645</td>
+                            <td>234</td>
+                        </tr>
+                        <tr>
+                            <td>Mechanical Keyboard</td>
+                            <td>434355</td>
+                            <td>2342</td>
+                            <td>566</td>
+                        </tr>
+                        <tr>
+                            <td>Office Keyboard</td>
+                            <td>2345243</td>
+                            <td>5435</td>
+                            <td>2123</td>
+                        </tr>
+                        <tr>
+                            <td>Mousepad</td>
+                            <td>3454353</td>
+                            <td>546456</td>
+                            <td>1243</td>
+                        </tr>
+
                     </tbody>
                 </table>
+                <br><br><br><br>
             </div>
         </div>
     </div>
